[package]
name = "tmux-greeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20", features = ["toml"] }
directories = "5.0.1"
serde = {version = "1.0.189", features = ["derive"] }
toml = "0.8.2"
